# Advent-of-Code-2022

./: .gitignore  .justfile  Cargo.toml  README.md
src/: lib.rs  main.rs  post.rs  template.rs
