[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[[bin]]
name = "post"
path = "src/post.rs"

[dependencies]
itertools = "0.10"
hashbrown = "0.13"
petgraph = "0.6"
array_tool = "1.0"
scan_fmt = "0.2"

# main.rs dependencies
regex = "1.7"
once_cell = "1.16"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

# post.rs dependencies
reqwest = "0.11"
tokio = { version = "1.22", features = ["full"] }
dotenv = "0.15"